--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.spurna.test">
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -21,7 +20,6 @@
         <activity android:name=".MainActivity"
             android:label="SpurnaApp"
             android:screenOrientation="portrait"/>
-
     </application>
-
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
